# uhttp

./: Cargo.toml  LICENSE  README.md  bench.bash  justfile
_old/body/: Cargo.toml
_old/sse/src/: index.html
benchmarks/: Cargo.toml
benchmarks/actix/: Cargo.toml
benchmarks/actix/src/: main.rs
benchmarks/go/: go.mod
benchmarks/go/src/: main.go
benchmarks/hyper_mt/: Cargo.toml
benchmarks/hyper_mt/src/: main.rs
benchmarks/hyper_st/: Cargo.toml
benchmarks/hyper_st/src/: main.rs
benchmarks/hyper_stream/: Cargo.toml
benchmarks/hyper_stream/src/: 0.rs  1.rs  main.rs
benchmarks/may_minihttp/: Cargo.toml
benchmarks/may_minihttp/src/: main.rs
benchmarks/nodejs/: index.js  package.json
benchmarks/nodejs-uws/: index.js
benchmarks/nodejs_uws/: package-lock.json  package.json
benchmarks/rouille/: Cargo.toml
benchmarks/rouille/src/: main.rs
benchmarks/sync/src/: main.rs
benchmarks/tiny_http/: Cargo.toml
benchmarks/tiny_http/src/: main.rs
benchmarks/tokio/: Cargo.toml
benchmarks/tokio/src/: main.rs
benchmarks/tokio_minihttp/: Cargo.toml
benchmarks/tokio_minihttp/src/: main.rs
benchmarks/tokio_minihttp/src/tokio_minihttp/: mod.rs  request.rs  response.rs
benchmarks/uhttp/: Cargo.toml
benchmarks/uhttp/src/: main.rs
benchmarks/uhttp_sync/: Cargo.toml
benchmarks/uhttp_sync/src/: main.rs
benchmarks/uhttp_tokio/: Cargo.toml
benchmarks/uhttp_tokio/src/: main copy 2.rs  main copy 4.rs  main copy.rs  main.rs  payload.rs
benchmarks/uhttp_tokio/src/checkpoints/: checkpoint1.rs
benchmarks/uhttp_tokio/src/constants/: headers.rs  methods.rs  mod.rs
benchmarks/uhttp_tokio/src/old/: main copy 3.rs  main copy 5.rs  main copy 6.rs
benchmarks/uhttp_tokio/src/uhttp/: date.rs  mod.rs  request.rs  response.rs
crates/uhttp/: Cargo.toml  README.md
crates/uhttp/src/: lib.rs
crates/uhttp/src/body/: bytes.rs  json.rs  mod.rs  utf8.rs
crates/uhttp/src/constants/: mod.rs
crates/uhttp/src/http1/: bytes.rs  create_server.rs  create_stream.rs  http1_server.rs  internal_types.rs  mod.rs  request.rs  res_ext.rs  response.rs
crates/uhttp/src/interface/: async_read.rs  handler_func.rs  mod.rs  request.rs  response.rs  result.rs
example/: 2main.rs  main copy.rs  main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/body/: Cargo.toml
examples/body/src/: main.rs
examples/body_json/: Cargo.toml
examples/body_json/src/: main.rs
examples/body_utf8/: Cargo.toml
examples/body_utf8/src/: main.rs
examples/chunked/: Cargo.toml
examples/chunked/src/: main.rs
examples/factory/: Cargo.toml
examples/factory/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/request_body/: Cargo.toml
examples/request_body/src/: main.rs
examples/routes_simple/: Cargo.toml
examples/routes_simple/src/: main.rs
examples/serving_file/: Cargo.toml
examples/serving_file/src/: main.rs
examples/sse/: Cargo.toml
examples/sse/src/: main.rs
examples/streamed/: Cargo.toml
examples/streamed/src/: main.rs
examples/sync/: Cargo.toml
examples/sync/src/: main.rs  old.rs
examples/tokio/: Cargo.toml
examples/tokio/_src/: old.rs  old2.rs
examples/tokio/_src/stream_body/: body.rs
examples/tokio/src/: main.rs
examples/tokio/src/stream_body/: data.rs  mod.rs  state.rs
results/: 100000_actix.html  100000_go.html  100000_nodejs.html  10000_actix.html  10000_go.html  10000_nodejs.html  1000_actix.html  1000_go.html  1000_nodejs.html  25000_actix.html  25000_go.html  50000_actix.html  50000_go.html  500_go.html
src/: headers.rs  lib.rs  request.rs  response.rs  server.rs  test.rs
src/sync/: body_parser.rs  mod.rs  request.rs  response.rs  server.rs
src/tokio/: body_parser.rs  body_perser_bench.rs  mod.rs  request.rs  response.rs  server.rs
uhttp/: Cargo.toml  README.md
uhttp/src/: bench.rs  constants.rs  headers.rs  lib.rs  request.rs  response.rs
uhttp/src/constants/: buffer.rs  chars.rs  content_type.rs  headers.rs  mod.rs  status.rs
uhttp/src/http1/: request_reader.rs  request_reader_test.rs  server.rs
uhttp/src/http_1/: mod.rs  response_writer.rs  server.rs
uhttp/src/sync/: body_parser.rs  body_perser_bench.rs  mod.rs  response.rs  server.rs
uhttp/src/tokio/: body_parser.rs  body_perser_bench.rs  request.rs  response.rs  server.rs
uhttp/src/utils/: body.rs
