[workspace]
resolver = "2"

members = [
  "./uhttp",
  "./examples/*",
  "./benchmarks/actix",
  "./benchmarks/uhttp_tokio",
  "./benchmarks/uhttp_sync",
  "./benchmarks/hyper_mt",
  "./benchmarks/hyper_stream",
  "./benchmarks/hyper_st",
  "./benchmarks/tokio_minihttp",
  "./benchmarks/tiny_http",
  "./benchmarks/rouille",
  "./benchmarks/may_minihttp",
]

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false