[workspace]
resolver = "2"

members = ["./crates/*", "./examples/*"]

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace.dependencies]
http-body-util = "0.1"
hyper = "1.6"
hyper-util = "0.1"
tokio = "1.45"
tokio-util = "0.7"
anyhow = "1.0"
futures = "0.3"
http = "1.2"
async_fn_traits = "0.1"
