[workspace]
resolver = "2"

members = ["./crates/*", "./examples/*"]

[workspace.lints.rust]
elided_lifetimes_in_paths = "allow"
rust_2018_idioms = { priority = -1, level = "deny" }

[workspace.lints.clippy]
module_inception = "allow"
uninlined-format-args = "allow"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace.dependencies]
http-body-util = "0.1"
hyper = "^1"
hyper-util = "0.1"
tokio = "^1"
tokio-util = "0.7"
anyhow = "^1"
futures = "0.3"
http = "^1"
async_fn_traits = "0.1"
