[workspace]
resolver = "2"

members = [
  "./actix",
  "./uhttp",
  "./hyper_mt",
  "./hyper_stream",
  "./hyper_st",
  "./tokio_minihttp",
  "./tiny_http",
  "./rouille",
  "./may_minihttp",
]

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
