[package]
name = "uhttp"
version = "0.1.0"
edition = "2021"

[lib]
name = "uhttp"
path = "./src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
path = "src/bench.rs"

[features]
# tokio = []

[dependencies]
bytes = "*"
futures = "0.3"
httparse = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
itoa = "1"

[dev-dependencies]
divan = "0.*"
