[package]
name = "uhttp"
version = "0.1.3"
edition = "2021"
description = "Rust HTTP Server Library for Humans"
license = "MIT"
homepage = "https://github.com/alshdavid/uhttp"
repository = "https://github.com/alshdavid/uhttp"

[lib]
name = "uhttp"

[[bench]]
name = "benchmarks"
harness = false
path = "src/bench.rs"

[dependencies]
httparse = "1"
bytes = "1"
may = "0.3"


[dev-dependencies]
divan = "0.*"
