[package]
name = "uhttp"
version = "0.3.0"
edition = "2024"
description = "Simple http server for humans"
license = "MIT"

[dependencies]
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1"] }
hyper-util = { workspace = true, features = ["server-graceful"] }
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
tokio-util = { workspace = true, features = ["io", "io-util", "futures-util"] }
anyhow = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
async_fn_traits = { workspace = true }
