[package]
name = "uhttp_example_body_json"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
uhttp = { path = "../../crates/uhttp", features = ["json"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
