[package]
name = "uhttp_example_tokio"
version = "0.1.0"
edition = "2021"

[dependencies]
uhttp = { path = "../../uhttp" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
bytes = "1.6.0"
